# pdb-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
data/: surface.ply
src/: basic_rasterizer.rs  fancy_rasterizer.rs  lib.rs  main.rs  rasterizer.rs  read.rs  render.rs  scene.rs  surface.rs  trivial_rasterizer.rs
src/ascii/: glyph_render.rs  mod.rs  rasterize.rs  ssim.rs
src/gpu/: .gitignore  basic_ascii.wgsl  camera.rs  compute_ssim.wgsl  fancy_ascii.wgsl  fancy_rasterizer.rs  instance.rs  main_tui.rs  main_windowed.rs  mod.rs  model.rs  resources.rs  run_tui.rs  run_windowed.rs  ssim_ascii.wgsl  ssim_rasterizer.rs  state_windowed.rs  state_windowless.rs  trivial_compute.wgsl  trivial_rasterizer.rs
src/gpu/mine/: geometry.rs  main.rs  mod.rs  rendering.rs  shader.wgsl  texture.rs
src/gpu/pdb_gpu/: camera.rs  input.rs  instance.rs  light.wgsl  main.rs  main_tui.rs  main_windowed.rs  main_windowless.rs  mod.rs  model.rs  resources.rs  run.rs  run_tui.rs  run_windowed.rs  shader.wgsl  state_windowed.rs  state_windowless.rs  texture.rs  trivial_compute.wgsl
src/tui/: mod.rs  popup.rs  state.rs  ui.rs
