[package]
name = "pdb_tui"
version = "0.1.0"
edition = "2021"
default-run = "pdb_tui"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
pdbtbx = "0.11.0"
rgb = "0.8"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
tobj = { version = "4.0.0", features = ["async"]}
parry3d = "0.13.5"
image = "0.24.8"
ratatui = "0.26.1"
crossterm = "0.27.0"
chrono = "0.4.34"
derive_setters = "0.1.6"
clap = { version = "4.5.1", features = ["derive"] }
ab_glyph = "0.2.23"
thiserror = "1.0.57"

# WGPU Tutorial
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
pollster = "0.3"  # TODO Swap this out for tokio
winit = "0.28"
wgpu = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18" # TODO Remove this and never refer to it in actual code
[[bin]]
name = "mine"
path = "src/gpu/mine/main.rs"

[[bin]]
name = "pdb_gpu"
path = "src/gpu/pdb_gpu/main.rs"
